# stratego

./: Cargo.toml  README.md  deployment.net
datagen/src/: thread.rs
src/: attacks.rs  deployment.rs  information.rs  lib.rs  main.rs  mcts.rs  moves.rs  policy.rs  position.rs  random.rs  select.rs  stratego.rs  tournament.rs  util.rs  value.rs
src/deployment/: heuristic.rs  network.rs
src/mcts/: ismcts.rs  iteration.rs  mcts.rs  node.rs  pimc.rs  search.rs
src/stratego/: attacks.rs  information.rs  moves.rs  position.rs  util.rs
src/tournament/: engine.rs  rating.rs  schedule.rs
src/value/: heuristic.rs  network.rs  simulation.rs
training/: Cargo.toml
training/src/: buffer.rs  deployment.rs  main.rs  thread.rs  value.rs
