[package]
name = "stratego"
version = "0.1.0"
edition = "2021"

[dependencies]
ordered-float = "5.0.0"
rand = "0.9.0"
tch = "0.19.0"
bincode = "2.0.1"

[profile.release]
panic = 'abort'
strip = true
lto = true
codegen-units = 1

[features]
info = []

[workspace]
members = [
    "training",
]
resolver = "2"
